--- a/frontend-ingress.yaml
+++ b/frontend-ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     kubernetes.io/ingress.class: "traefik"
 spec:
   rules:
-  - host: gbook.user0X.pl.grupa.iti
+  - host: gbook.devopsseries.pl
     http:
       paths:
       - backend:
